--- a/water_cycle/css/small.css
+++ b/water_cycle/css/small.css
@@ -51,9 +51,10 @@ nav ul li.active a {
 }
 /*----------- MAIN --------------*/
 main {
-    padding: 0 2%;
+    padding: 01rem 2%;
     min-height: 10rem;
-    background-color: #fff
+    background-color: #fff;
+    min-width: 100%; ;
 }
 
 
@@ -62,6 +63,10 @@ footer {
     background-color: #ddd;
     padding: .5rem 2%;
     text-align: center;
+    /*position: absolute;
+     bottom:0;
+     width: 100%;
+     height: 60px;*/
 }
 
 
