--- a/design/css/small.css
+++ b/design/css/small.css
@@ -15,15 +15,16 @@ body {
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
-    background-color: #ddd;
+    background-color: rgb(255,255,255);
+    
 }
-header img {float: left; margin-right: 10px; width: 50px;}
+header img {float: left; margin-right: 10px; width: 10%;}
 header h1 {margin: 0; font-size: 1.3rem;}
 header h2 {margin: 0; font-weight: normal; font-size: 1rem;}
 
 /*----------- NAVIGATION --------------*/
 nav {
-    background-color: #666;
+    background-color: rgb(0, 167, 75) ;
 }
 nav ul {
     list-style-type: none;
@@ -42,11 +43,11 @@ nav ul li a {
 
 
 nav ul li a:hover {
-    background-color: #aaa;
-    color: #333;
+    background-color: rgb(37, 91, 172);
+    color: rgb(255, 255, 255);
 }
 nav ul li.active a {
-    background-color: #000;
+    background-color: rgb(49, 127, 245);
     color: #fff;
 }
 /*----------- MAIN --------------*/
@@ -56,17 +57,26 @@ main {
     background-color: #fff;
     min-width: 100%; ;
 }
+main figure.mainphoto img{
+    text-align: center;
+    min-width: 100%;
+    margin: 0 0 0 0;
+    
+}
+main figure.mainphoto figcaption{
+    text-align: center;
+}
 
 
 /*----------- FOOTER --------------*/
 footer {
-    background-color: #ddd;
+    background-color: rgb(0, 167, 75) ;
     padding: .5rem 2%;
     text-align: center;
-    /*position: absolute;
+    position: absolute;
      bottom:0;
      width: 100%;
-     height: 60px;*/
+     height: 45px;
 }
 
 
