--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -26,7 +26,7 @@ header img {
             width: 15%;}
 header h1 {
             margin: 0;
-            font-size: 1.75rem;
+            font-size: 1.25rem;
             color: #ffa62f;
             text-align: center;
 }
@@ -95,7 +95,7 @@ footer {
     text-align: center;
     width: 100%;
     height: 45px;
-    font-size: 16px;
+    font-size: 1rem;;
     font-family: 'Roboto', sans-serif;
     color: #ffa62f;
 }
