Adjusted footer parameters for two column display

--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -45,6 +45,9 @@ main table, th, td{
 
 
 /*----------- FOOTER --------------*/
-
+footer p{ 
+    column-count: 2;
+}
+    
 }
 /* end of media query */
