--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -74,6 +74,7 @@ footer{
     flex-direction: column;
     min-height: 100%;
     clear: both;
+    font-size: 1rem;
 }
-    
+
 } /* end of media query */
