--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -161,11 +161,18 @@ main.json article:hover{
     transform: scale(1.05); 
     }
  /*--------------Form----------------*/
+form{
+    
+    color: red;
+}
  form fieldset{
     margin: 2rem 0;
     border: 1px solid #ffa62f;
     border-radius: 10px;
     padding: .5rem 2%;
+    display: flex;
+    flex-direction: row;
+    color: red;
  }
 form legend{
     color: black;
@@ -173,13 +180,13 @@ form legend{
     padding: 0 .5rem;
 }
 form label.top, form div{
-    display: block;
+    display: flex;
     padding-top: 1rem;
     color: black;
     font-size: .8rem;
 }
 form label.top input, form label.top select{
-    display: block;
+    display: flex;
     font-size: 1rem;
     border: solid 1px #999;
     border-radius: 130px;
