--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -1,38 +1,249 @@
-@media only screen and (min-width: 560px) {
+@media only screen and (min-width: 700px) {
 
 
-/*----------- HEADER -----------*/
-header img {
-    width: 15rem;
-    float: left;}
-header h1{
-    font-size: 4rem;
-    margin-top: 2rem;
-}
-header h2{
-    font-size:2rem;
-    margin-top: 1rem;
-}
+    main{
+        max-width: 110rem;
+        margin:auto;
+    }
+    body{
+        background-color:#dfdfdf;
+    }
+    /*----------- HEADER --------------*/
+    header {
+        padding: .5rem 2%;
+        background-color: #517b8d;
+        display: grid;
+        grid-template-rows: 15% auto;
+        font-family: 'Great Vibes', cursive;
+        color: #dfdfdf;
+    }
+    header img{
+        float: left;
+        width: 10rem;
+    }
+    header h1,h2{
+        text-align: center;
+        margin: .25rem;
+        padding: .25rem;
+        
+    
+    }
+    header h1{
+        margin-top: 1rem;
+        font-size: 2rem;
+        text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
+    }
+    header h2{
+        font-size: 1rem;
+        text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
+    }
+    /*----------- NAVIGATION --------------*/
+    button{display: none;
+    }
+    nav ul {margin-left: 4%;}
+    nav ul li {float: left;}
 
-/*--------- NAVIGATION ---------*/
-button{display: none;
-}
-nav ul {margin-left: 2%;}
-nav ul li {float: left;}
+    nav ul li a{padding: 1rem 1rem;
+                font-size: 1.3rem;}
+    nav ul.hide{
+        display: inline;
+    }
 
-nav ul li a{padding: .6rem .5rem;
-            font-size: 1.5rem;}
-nav ul.hide{display: block;}
-
-/*----------- BODY -------------*/
-
-
-
-/*----------- MAIN -------------*/
-
-/*------------FORM--------------*/
-
-
-/*----------- FOOTER -----------*/
-
+    /*----------- MAIN --------------*/
+    main{
+        background-color: rgba(223, 223, 223, 0.596);
+        font-family: 'PT Sans Narrow', sans-serif;    
+    }
+    
+    div.mainpage{
+        display: flex;
+        flex-wrap: wrap;
+    
+    }
+    div.mainpage article{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    .pita{
+        opacity: .8;
+    }
+    div.mainpage article.article0{
+        position: relative;
+        text-align: center;
+        color: #DFDFDF;
+        width: 100%;
+    }
+    div.mainpage article.article0 .texttop{
+        position: absolute;
+        bottom: 82%;
+        font-family: 'Great Vibes', cursive;
+        z-index: 1;
+    }
+    div.mainpage article.article0 .text1{
+        position: absolute;
+        display: block;
+        bottom: 71%;
+        z-index: 1;
+    }
+    div.mainpage article.article0 .text2{
+        position: absolute;
+        display: block;
+        bottom: 50%;
+        z-index: 1;
+    }
+    div.mainpage article.article0 .text3{
+        position: absolute;
+        bottom: 26%;
+        left: auto;
+        color: white;
+        font-size: 2.5rem;
+        text-decoration: none;
+        background-color: #517B8D;
+        border-radius: 15px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.19);
+        padding: .5rem;
+        transition-duration: .05s;
+        z-index: 1;
+    }
+    div.mainpage article.article0 .text3:hover{
+        box-shadow: 0 4px 8px 0 #DFDFDF, 0 6px 20px 0 #DFDFDF;
+    }
+    div.mainpage article.article0 .textbottom{
+        position: absolute;
+        bottom: 0%;
+        display: block;
+    }
+    div.mainpage article.article0 img{
+        display: flex;
+        width:100%;
+    }
+    
+    div.mainpage article.article0 h1{
+        padding: 0 1%;
+        margin: 0 1%;
+        
+    }
+    div.mainpage article.article1{
+        width: 18%;
+        border-radius: 5px;
+    }
+    div.mainpage article.article1 img{
+        display: flex;
+        width: 110%;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.19);
+    
+    }      
+    .article1 figcaption{
+       text-align: center;
+       text-decoration: none;
+    }
+    
+    div.mainpage article.article2{
+        width: 78%;
+        flex-direction: row;
+        margin: 1%;
+        font-size: 1.2rem;
+    }
+    div.mainpage article.article2 img{
+        width: 400px;
+        padding: 1rem;
+        margin: 1rem;
+        float: left;
+    }
+    div.mainpage article.article2 p{
+        display: block;
+        column-count: 2;
+    }
+    .templeactivities{
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        justify-content: space-around;
+        width: 100%;
+        
+    }
+    div.mainpage article.article3{
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: space-around;
+        width: 100%;
+        margin: 1%;
+    }
+    div.mainpage article.article3 section{
+        width: 20%;
+        align-items: center;
+    }
+    div.mainpage article.article3 img{
+        width: 85%;
+       }
+    div.mainpage article.article3 h1 {
+        margin: 1rem 1%;
+    }
+    div.mainpage article.article3 h2 {
+        margin: .0;
+        padding: 0;
+    }
+    div.mainpage article.article3 h4 {
+        margin: .5rem;
+        padding: 0;
+        font-size: 1rem;
+    }
+    /*------------Form--------------*/
+    
+    
+    /*----------- FOOTER --------------*/
+    footer {
+        background-color: #517b8d ;
+        padding: .2rem 1%;
+        text-align: center;
+        width: 100%;
+        height: auto;
+        font-size: 1rem;;
+        font-family: 'PT Sans Narrow', sans-serif;
+        color: #dfdfdf;
+    }
+    
+    footer p{
+        font-size: .8rem;
+        text-align: left;
+        list-style-type: none;
+        display: block;
+        margin-bottom: .25rem;
+        padding-bottom: .25rem;
+        column-count: 2;
+        column-rule-width: 2rem;
+    }
+    footer p a{
+        font-weight: bold;
+        font-size:1rem;    
+    }
+    footer p.date{
+        text-align: center;
+        padding: 1rem;
+        font-size:.8rem;
+    }
+    footer p a.titles{
+        color: #000;
+    }
+    footer p a.address{
+        font-size: 1rem;
+    }
+    footer p a.email{
+        font-size: 1rem;
+    }
+    div.end{
+        margin-top: 1rem;
+    }
+    /*----- Clearfix: Force an Element not to collapse -----*/
+    .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
 }
